# agentic_context_engineering

./: .gitignore  README.md  install.js  package-lock.json  package.json  pyproject.toml
docs/: testing.md
docs/bootstrap/: spec.md
docs/curator/: contract.md  design.md  observability.md  spec.md  testing.md
docs/dedup/: spec.md
docs/hooks/: spec.md  testing.md
docs/reflector/: spec.md
docs/retry/: contract.md  design.md  observability.md  spec.md  testing.md
docs/scoring/: contract.md  design.md  observability.md  spec.md  testing.md
docs/sections/: contract.md  design.md  observability.md  spec.md  testing.md
src/: settings.json
src/commands/: bootstrap-playbook.md
src/hooks/: bootstrap_playbook.py  common.py  precompact.py  session_end.py  subagent_stop.py  test_common_ace.py  user_prompt_inject.py
src/prompts/: curator.txt  playbook.txt  reflection.txt  reflector.txt
tests/: test_bootstrap_playbook.py  test_bootstrap_playbook_integration.py  test_bootstrap_playbook_plan.md  test_curator_contract.py  test_curator_whitebox.py  test_hooks_contract.py  test_hooks_whitebox.py  test_precompact_contract.py  test_precompact_whitebox.py  test_retry_contract.py  test_retry_whitebox.py  test_scoring_contract.py  test_scoring_whitebox.py  test_sections_contract.py  test_sections_whitebox.py  test_subagent_stop_contract.py  test_subagent_stop_whitebox.py
